Fix listview divider style on non built list
[Problem] List divider in non built list was treated like group index.
          In this situation divider text and lines were not centered,
          but aligned to left site with only one line which was too long.
[Solution] Use more restricted selector in less file

--- a/src/css/profile/wearable/changeable/theme-circle/listview.less
+++ b/src/css/profile/wearable/changeable/theme-circle/listview.less
@@ -339,7 +339,7 @@
 	}
 
 	&:not(.ui-arc-listview):not(.ui-arc-listview-carousel-item):not(.ui-snap-listview) {
-		li {
+		li:not(.ui-listview-divider) {
 			padding: 25 * @unit_base 30 * @unit_base 26 * @unit_base;
 			min-height: auto;
 			color: @color_multiline_list_item;
